--- a/src/i18n/zh-cn.json
+++ b/src/i18n/zh-cn.json
@@ -2,11 +2,23 @@
   "loginPage":{
     "username": "用户名",
     "password": "密码",
+    "repeatPassword": "确认密码",
     "rememberMe": "记住我",
     "newUser": "新用户?",
     "register": "注册",
     "login": "登录",
     "wrongPassword": "用户名密码错误",
-    "serverError": "服务器开小差了，请稍后再试"
+    "serverError": "服务器开小差了，请稍后再试",
+    "email": "邮箱",
+    "nickname": "昵称",
+    "emailCanNotBeNull": "邮箱不能为空",
+    "emailFormatNotCorrect": "邮箱格式错误",
+    "usernameCanNotBeNull": "用户名不能为空",
+    "usernameNotValid": "用户名6-20个字符，只允许字母，- 和 _",
+    "passwordCanNotBeNull": "密码不能为空",
+    "passwordTooShort": "密码需要长于6位",
+    "passwordNotSame": "两次输入的密码不一致",
+    "emailAlreadyExist": "邮箱已经被注册",
+    "usernameAlreadyExist": "用户名已被注册"
   }
 }
