New Article edit page

--- a/src/i18n/en-us.json
+++ b/src/i18n/en-us.json
@@ -23,9 +23,17 @@
   },
   "editArticle":{
     "publish": "Publish",
-    "SaveAsDraft": "Save as Draft"
+    "SaveAsDraft": "Save as Draft",
+    "untitledArticle": "No Title",
+    "tags": "Tags",
+    "categories": "Categories"
   },
   "tagCard":{
     "noTags": "You don't have any tags"
+  },
+  "userCard":{
+    "noNickName": "No nickname",
+    "noTitle": "No Title",
+    "noLocation": "No location"
   }
 }
