Add Logout ability, add user setting placeholder, new article button will hide when the owner and login user doesn't match

--- a/vblog-ui/src/i18n/zh-cn.json
+++ b/vblog-ui/src/i18n/zh-cn.json
@@ -35,5 +35,12 @@
     "noNickName": "未设置昵称",
     "noTitle": "未设置头衔",
     "noLocation": "未设置地点"
+  },
+  "userMenu":{
+    "logOut": "退出登录",
+    "settings": "设置"
+  },
+  "fab":{
+    "newPost": "新文章"
   }
 }
