Add user settings, user now can change their nick name, location and title

--- a/vblog-ui/src/i18n/en-us.json
+++ b/vblog-ui/src/i18n/en-us.json
@@ -35,5 +35,16 @@
     "noNickName": "No nickname",
     "noTitle": "No Title",
     "noLocation": "No location"
+  },
+  "userMenu":{
+    "logOut": "Log out",
+    "settings": "Settings"
+  },
+  "fab":{
+    "newPost": "New post"
+  },
+  "articleCard":{
+    "postAt": "发布于",
+    "readMore": "阅读更多"
   }
 }
