Fix upload article error when no tags or category

--- a/vblog-ui/src/i18n/en-us.json
+++ b/vblog-ui/src/i18n/en-us.json
@@ -25,7 +25,7 @@
     "publish": "Publish",
     "SaveAsDraft": "Save as Draft",
     "untitledArticle": "No Title",
-    "tags": "Tags",
+    "tags": "Tags (Separate with comma)",
     "categories": "Categories"
   },
   "tagCard":{
