Add category card

--- a/vblog-ui/src/i18n/en-us.json
+++ b/vblog-ui/src/i18n/en-us.json
@@ -29,9 +29,15 @@
     "categories": "Categories"
   },
   "tagCard":{
+    "tags": "Tags",
     "noTags": "You don't have any tags"
   },
+  "categoryCard":{
+    "categories": "Categories",
+    "noCategories": "You don't have any Categories"
+  },
   "userCard":{
+    "userInfo": "Personal Info",
     "noNickName": "No nickname",
     "noTitle": "No Title",
     "noLocation": "No location"
