--- a/vblog-ui/src/i18n/zh-cn.json
+++ b/vblog-ui/src/i18n/zh-cn.json
@@ -29,9 +29,15 @@
     "categories": "分类"
   },
   "tagCard":{
-    "noTags": "你现在没有标签"
+    "tags": "标签",
+    "noTags": "没有标签"
+  },
+  "categoryCard":{
+    "categories": "分类",
+    "noCategories": "没有分类"
   },
   "userCard":{
+    "userInfo": "个人信息",
     "noNickName": "未设置昵称",
     "noTitle": "未设置头衔",
     "noLocation": "未设置地点"
