User now can edit an article

--- a/vblog-ui/src/i18n/en-us.json
+++ b/vblog-ui/src/i18n/en-us.json
@@ -21,7 +21,8 @@
     "emailAlreadyExist": "This email address has already been registered",
     "usernameAlreadyExist": "This user name is already been used"
   },
-  "editArticle":{
+  "articleEditor":{
+    "title": "Title",
     "publish": "Publish",
     "SaveAsDraft": "Save as Draft",
     "untitledArticle": "No Title",
