- User image will be stored in dedicated path - Change sidebar to be sticky - Login user menu now prettier

--- a/vblog-ui/src/i18n/en-us.json
+++ b/vblog-ui/src/i18n/en-us.json
@@ -50,6 +50,7 @@
     "noLocation": "No location"
   },
   "userMenu":{
+    "homepage": "My Home",
     "logOut": "Log out",
     "settings": "Settings"
   },
