feature: tag card and category card are clickable now feature: move settings to seperate page

--- a/vblog-ui/src/i18n/en-us.json
+++ b/vblog-ui/src/i18n/en-us.json
@@ -31,6 +31,7 @@
     "placeholder": "Type your MD article here"
   },
   "articleList":{
+    "allArticles": "All articles",
     "noArticle": "There is no article now",
     "nextPage": "Next",
     "prevPage": "Prev"
