--- a/vblog-ui/src/i18n/zh-cn.json
+++ b/vblog-ui/src/i18n/zh-cn.json
@@ -77,7 +77,9 @@
     "passwordSettings":"密码设置",
     "oldPassword": "旧密码",
     "newPassword": "新密码",
-    "repeatPassword": "确认密码"
+    "repeatPassword": "确认密码",
+    "oldPasswordNotCorrect": "旧密码错误",
+    "passwordTooShort": "密码需要长于6位"
   },
   "ConfirmButton":{
     "yes": "确定",
